# evisum

./: .gitignore  AUTHORS  BUGS  COPYING  CREDITS  LICENSE  NEWS  README  README.md  TODO  VERSION  description  makefile  meson.build
data/: evisum.desktop  meson.build
data/desktop/: .meson.build.swp  evisum.desktop  evisum_cpu.desktop  evisum_mem.desktop  meson.build
data/icons/: meson.build
data/images/: meson.build
data/themes/: evisum.edc  meson.build
po/: LINGUAS  POTFILES.in  es.po  evisum.pot  fr.po  it.po  ka.po  meson.build  pt.po
src/: disks.c  disks.h  main.c  makefile  meson.build  process.c  process.h  system.c  system.h  ui.c  ui.h
src/tests/: widget_test.c  widget_test2.c
src/tingle/: README  makefile  tingle.c  tmux.conf
