install_data('evisum.png',
             install_dir: join_paths(dir_data, 'icons/hicolor/256x256/apps'))
install_data('evisum_cpu.png',
             install_dir: join_paths(dir_data, 'icons/hicolor/256x256/apps'))
install_data('evisum_mem.png',
             install_dir: join_paths(dir_data, 'icons/hicolor/256x256/apps'))
