install_data('go-up.png', 'go-down.png',
             'battery.png', 'network.png',
             'window.png', 'start.png', 'stop.png',
             'kill.png', 'cancel.png',
             'increase.png', 'decrease.png',
             'sensor.png', 'mount.png', 'ladyhand.png',
             'find.png', 'bug.png', 'exit.png',
             install_dir: join_paths(dir_data, 'evisum/images'))
