install_data('go-up.png', 'go-down.png',
             'battery.png', 'start.png', 'stop.png',
             'kill.png', 'cancel.png', 'network.png',
             'increase.png', 'decrease.png',
             'sensor.png', 'mount.png', 'ladyhand.png',
             'find.png', 'bug.png', 'exit.png', 'cpu.png',
             'memory.png', 'storage.png', 'misc.png',
             'effects.png', 'info.png',
             'menu.png','lovethisdogharvey.png', 'application.png',
             'e.png', 'freebsd.png', 'linux.png', 'on.png', 'off.png',
             'proc.png', 'manual.png', 'actions.png', 'threads.png',
             'apply.png',
             install_dir: join_paths(dir_data, 'evisum/images'))
